fixed spacing

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ a.text:hover, a.text:active {
     transition: all 0.3s ease-in 0s;
 }
 
-.StudentsAndTattoos{
+.StudentTattoos{
     padding-right: 3rem !important;
 }
 
